harness/soil-test/tests/api/ui/impl_two_traits_with_same_name.stderr
error: Two traits with the same name detected! The trait name is used to generate its ID. Please rename one trait at the declaration!
  --> tests/api/ui/impl_two_traits_with_same_name.rs:42:15
   |
42 |     impl second::Api<Block> for Runtime {
   |                  ^^^

error: First trait implementation.
  --> tests/api/ui/impl_two_traits_with_same_name.rs:38:13
   |
38 |     impl self::Api<Block> for Runtime {
   |                ^^^
